--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,14 @@
   background-color: #0c4e9c;
 }
 
+.textBlue{
+  color: #0c4e9c;
+}
+
 ::-webkit-scrollbar{
   width: 0px;
+}
+
+.aspect-2\/1{
+  aspect-ratio: 2/1;
 }
