--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@
   aspect-ratio: 16/6;
 }
 
+.aspect-40\/15{
+  aspect-ratio: 40/15;
+}
+
 .tinyText{
   font-size: 0.5rem;
 }
@@ -36,4 +40,14 @@ html{
 
 .aspect-16\/2{
   aspect-ratio: 16/2;
+}
+
+.bottom-1\.26{
+  bottom: 1.26vw;
+}
+
+.button-invisible{
+  width: 9.2vw;
+  height: 2.2vw;
+  border-radius: 10vw;
 }
