--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -1,61 +1,14 @@
 ---
-import { products } from "../data/products";
 import Layout from "../layouts/Layout.astro";
-import { carContext as car } from "../shopCarContext";
-import Shop from '../components/Shop'
-
-let amount = 0;
-car.content.map((product) => {
-    amount += product.price;
-});
-console.log(amount);
+import Shop from "../components/Shop";
+import Pay from '../components/Pay'
 ---
 
 <Layout>
     <div class="flex flex-col items-center">
         <h1 class="text-4xl text-center font-bold">Carrito</h1>
         <h2 class="text-2xl self-start">Servicios seleccionados</h2>
-        <Shop client:load/>
-        <form action="https://lab.cardnet.com.do/authorize" method="post">
-            <input name="TransactionType" value="0200" type="hidden" />
-            <input name="CurrencyCode" value="214" type="hidden" />
-            <input name="AcquiringInstitutionCode" value="349" type="hidden" />
-            <input name="MerchantType" value="5440" type="hidden" />
-            <input name="MerchantNumber" value="349041263 " type="hidden" />
-            <input name="MerchantTerminal" value="22222222" type="hidden" />
-            <input
-                name="ReturnUrl"
-                value="http://localhost:4321/api/redirect"
-                type="hidden"
-            />
-            <input
-                name="CancelUrl"
-                value="http://localhost:4321/api/redirect"
-                type="hidden"
-            />
-            <input name="PageLanguaje" value="ENG" type="hidden" />
-            <input name="OrdenId" value="686" type="hidden" />
-            <input name="TransactionId" value="160088" type="hidden" />
-            <input name="Amount" value={amount * 100} type="hidden" />
-            <input name="Tax" value="00000000" type="hidden" />
-            <input
-                name="MerchantName"
-                value="COMERCIO PARA REALIZAR PRUEBAS DO"
-                type="hidden"
-            />
-            <input
-                name="KeyEncriptionKey"
-                value="1fc500b127d04b532f759d183944b057"
-                type="hidden"
-            />
-            <input name="Ipclient" value="X.X.X.X" type="hidden" />
-            <input name="loteid" value="001" type="hidden" />
-            <input name="seqid" value="001" type="hidden" />
-            <input
-                class="bg-blue-500 text-white rounded-md px-6 py-1"
-                type="submit"
-                value="Pagar"
-            />
-        </form>
+        <Shop client:only />
+        <Pay client:only/>
     </div>
 </Layout>
