--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,8 +67,9 @@ import Products from "../components/Products";
                 alt="Patrocinadores"
             />
         </div>
-        <Products client:load/>
+        <Products client:load />
         <Recomendations />
         <OpenWsDialog client:load />
     </div>
 </Layout>
+ ../ShopCarContext.tsx
