--- a/.vercel/output/functions/render.func/src/pages/carrito.astro
+++ b/.vercel/output/functions/render.func/src/pages/carrito.astro
@@ -4,7 +4,7 @@ import Shop from "../components/Shop";
 import Pay from '../components/Pay'
 ---
 
-<Layout>
+<Layout title="Carrito | SKYDENTRD">
     <div class="flex flex-col items-center">
         <h1 class="text-4xl text-center font-bold">Carrito</h1>
         <h2 class="text-2xl self-start">Servicios seleccionados</h2>
