--- a/src/pages/cita.astro
+++ b/src/pages/cita.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Crea tu cita - SKYDENT RD">
+<Layout title="Crea tu cita | SKYDENT RD">
     <div class="">
         <form
             class="relative py-10 md:mx-40 lg:px-20 px-4 md:px-10 border rounded-md flex flex-col"
