prerender static pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true
 import video from "../assets/VIDEO.mp4";
 import blueLife from "../assets/BLUE LIFE.webp";
 import sponsors from "../assets/PATROCINADORESd.webp";
