--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true
 import Layout from "../layouts/Layout.astro";
 import Shop from "../components/Shop";
 import Pay from '../components/Pay'
