add real products

--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -6,9 +6,9 @@ import Pay from '../components/Pay'
 ---
 
 <Layout title="Carrito | SKYDENTRD">
-    <div class="flex flex-col items-center">
+    <div class="flex flex-col items-center px-5">
         <h1 class="text-4xl text-center font-bold">Carrito</h1>
-        <h2 class="text-2xl self-start">Servicios seleccionados</h2>
+        <h2 class="text-2xl self-start font-bold">Servicios seleccionados</h2>
         <Shop client:only />
         <Pay client:only/>
     </div>
