--- a/src/components/Recomendations.astro
+++ b/src/components/Recomendations.astro
@@ -55,7 +55,7 @@ const videos = [
     <div class="flex flex-col md:grid md:grid-cols-4 gap-3">
         {
             videos.map((v) => (
-                <div class="">
+                <div class="px-5">
                     <video class="" controls src={v.path} />
                     <h3 class="font-bold text-center py-4 textBlue">
                         {v.title}
