--- a/src/pages/carrito.astro
+++ b/src/pages/carrito.astro
@@ -7,7 +7,7 @@ import Pay from '../components/Pay'
 
 <Layout title="Carrito | SKYDENTRD">
     <div class="flex flex-col items-center px-5">
-        <h1 class="text-4xl text-center font-bold">Carrito</h1>
+        <h1 class="text-4xl text-center font-bold mb-6 md:mb-0">Carrito</h1>
         <h2 class="text-2xl self-start font-bold">Servicios seleccionados</h2>
         <Shop client:only />
         <Pay client:only/>
