--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Products from "../components/Products";
         </div>
         <Financing />
         <Services />
-        <video src={video} loop muted controls class="w-full"></video>
+        <video src={video} loop muted controls autoplay class="w-full"></video>
         <div class="flex items-center flex-col pt-10" id="blueLife">
             <img
                 src={blueLife.src}
