--- a/src/components/Recomendations.astro
+++ b/src/components/Recomendations.astro
@@ -56,7 +56,7 @@ const videos = [
         {
             videos.map((v) => (
                 <div class="px-5">
-                    <video class="" controls src={v.path} />
+                    <video class="" controls muted autoplay loop src={v.path} />
                     <h3 class="font-bold text-center py-4 textBlue">
                         {v.title}
                     </h3>
