--- a/src/pages/respuesta-pago.astro
+++ b/src/pages/respuesta-pago.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import { clearCart } from '../shopCarContext'
 const response = await Astro.request.formData();
 // ResponseCode: string
 // OrdenID: string
@@ -16,6 +17,7 @@ for (const [key, value] of response.entries()) {
 }
 let message: string;
 const code = object.ResponseCode;
+clearCart()
 message =
     code === "00"
         ? "Aprobada"
@@ -191,11 +193,15 @@ message =
             <p class="text-center text-xl">
                 Mensaje: <span class="font-bold">{message}</span>
             </p>
+            {
+                message === 'Aprobada' && <p class="text-center flex flex-col gap-4 font-bold">Ponte en contacto con nosotros para agendar la cita. <span>Nuestro Whatsapp es: </span><a href="https://wa.me/8496338938" target="_blank" class="text-green-700 underline">+1 (849)-633-8938</a></p>
+            }
             <a
                 href="/"
                 class="text-center flex justify-center text-blue-500 hover:text-black duration-200"
                 >Seguir navegando en la pagina</a
             >
+
         </div>
     </div>
 </Layout>
