fixed merchant data

--- a/src/pages/respuesta-pago.astro
+++ b/src/pages/respuesta-pago.astro
@@ -166,7 +166,7 @@ message =
         : code === "97"
         ? "Emisor no Disponible"
         : code === "98"
-        ? "Excede Limete de Efectivo"
+        ? "Excede Limite de Efectivo"
         : code === "99"
         ? "CVV or CVC Error response"
         : code === "TF"
